--- a/amazon.html
+++ b/amazon.html
@@ -60,6 +60,6 @@
     
     <!-- <script src="data/cart.js"></script> -->
     <!-- <script src="data/products.js"></script> -->
-    <script type="module" src="scripts/amazon.js"></script>
+    <script type="module" src="scripts/amazon.js"></script>  <!-- this file is named called entry point -->
   </body>
 </html>
